[tool.poetry]
name = "mapy"
version = "0.1.0"
description = ""
authors = ["Felix Horvat <felix.horvat@ocell.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rasterio = "^1.3.10"
anthropic = "^0.30.1"
py-staticmaps = { extras = ["cairo"], version = "^0.4.0" }
pillow = "^10.4.0"
shapely = "^2.0.4"
pycairo = "^1.26.1"
geopandas = "^1.0.1"
pyproj = "^3.6.1"
matplotlib = "^3.9.1"
mercantile = "^1.2.1"
pystache = "^0.6.5"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
flake8 = "^7.1.1"
mock = "^5.1.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
